--- a/packages/oracle/config.json
+++ b/packages/oracle/config.json
@@ -77,6 +77,25 @@
         "type": "http-get",
         "direction": "forward",
         "query": "json(https://www.mexc.com/open/api/v2/market/ticker?symbol=MATIC_USDC).data[0].last"
+      },
+      {
+        "id": "gmx-usdc",
+        "label": "gmx/usdc",
+        "type": "composite",
+        "sources": [
+          {
+            "type": "http-get",
+            "label": "gmx/usdt",
+            "direction": "forward",
+            "query": "json(https://api.huobi.pro/market/history/trade?symbol=gmxusdt&size=1).data[0].data[0].price"
+          },
+          {
+            "type": "http-get",
+            "label": "usdt/usdc",
+            "direction": "backward",
+            "query": "json(https://api.huobi.pro/market/history/trade?symbol=usdcusdt&size=1).data[0].data[0].price"
+          }
+        ]
       }
     ]
   },
@@ -125,22 +144,16 @@
           "priceBaseTokenId": "fweth"
         },
         {
-          "id": "arb-fweth",
-          "address": "0xf97c7F7ccBB90ba32d3fb01aF18c8FFf5A94Bd65",
-          "priceId": "arb-eth",
-          "priceBaseTokenId": "arb"
-        },
-        {
-          "id": "gmx-fweth",
-          "address": "0x03fA449776FBE2a38771BD638be94E32592372f6",
-          "priceId": "gmx-eth",
-          "priceBaseTokenId": "gmx"
-        },
-        {
           "id": "arb-usdc",
           "address": "0x9C653a10e4C51e9A784FeE3D5495de91cf3e1c51",
           "priceId": "arb-usdc",
           "priceBaseTokenId": "arb"
+        },
+        {
+          "id": "gmx-usdc",
+          "address": "0x32859f88bB45fa5e25453Ba044D8fF5Fc243a8D9",
+          "priceId": "gmx-usdc",
+          "priceBaseTokenId": "gmx"
         }
       ],
       "updatePriceJobs": [
@@ -149,15 +162,11 @@
           "periodMs": 60000
         },
         {
-          "poolMockId": "arb-fweth",
-          "periodMs": 60000
-        },
-        {
-          "poolMockId": "gmx-fweth",
-          "periodMs": 60000
-        },
-        {
           "poolMockId": "arb-usdc",
+          "periodMs": 60000
+        },
+        {
+          "poolMockId": "gmx-usdc",
           "periodMs": 60000
         }
       ]
