--- a/packages/deploy/src/data/deploy/ethereum/config.json
+++ b/packages/deploy/src/data/deploy/ethereum/config.json
@@ -152,6 +152,7 @@
       }
     }
   ],
+  "routerPools": [],
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
       "address": "0x2f39d218133AFaB8F2B819B1066c7E434Ad94E9e",
