--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -16,7 +16,7 @@ jobs:
       runs-on: ubuntu-latest
       strategy:
         matrix:
-          tests: [short, long, longAndShort, shortIncome, longIncome, simulation1, simulation2, simulation3, longEmergency, shortEmergency, keeper]
+          tests: [short, long, longAndShort, shortIncome, longIncome, simulation1, simulation2, simulation3, longEmergency, shortEmergency, keeper, balanceSync, balanceSyncWithdrawBase, balanceSyncWithdrawQuote]
       steps:
         - uses: actions/checkout@v3
         - name: Use Node.js 18.14.2
