--- a/packages/deploy/src/data/deploy/zksync-goerli/config.json
+++ b/packages/deploy/src/data/deploy/zksync-goerli/config.json
@@ -25,6 +25,20 @@
       "name": "USD Coin",
       "symbol": "USDC",
       "decimals": 6
+    },
+    {
+      "type": "mintable",
+      "id": "wbtc",
+      "name": "Wrapped BTC",
+      "symbol": "WBTC",
+      "decimals": 8
+    },
+    {
+      "type": "mintable",
+      "id": "pepe",
+      "name": "Pepe",
+      "symbol": "PEPE",
+      "decimals": 2
     }
   ],
   "prices": [
@@ -34,6 +48,32 @@
       "type": "http-get",
       "direction": "forward",
       "query": "json(https://api.huobi.pro/market/history/trade?symbol=ethusdc&size=1).data[0].data[0].price"
+    },
+    {
+      "id": "btc-usdc",
+      "label": "btc/usdc",
+      "type": "http-get",
+      "direction": "forward",
+      "query": "json(https://api.huobi.pro/market/history/trade?symbol=btcusdc&size=1).data[0].data[0].price"
+    },
+    {
+      "id": "pepe-usdc",
+      "label": "pepe/usdc",
+      "type": "composite",
+      "sources": [
+        {
+          "type": "http-get",
+          "label": "pepe/usdt",
+          "direction": "forward",
+          "query": "json(https://api.huobi.pro/market/history/trade?symbol=pepeusdt&size=1).data[0].data[0].price"
+        },
+        {
+          "type": "http-get",
+          "label": "usdt/usdc",
+          "direction": "backward",
+          "query": "json(https://api.huobi.pro/market/history/trade?symbol=usdcusdt&size=1).data[0].data[0].price"
+        }
+      ]
     }
   ],
   "uniswap": {
@@ -47,10 +87,30 @@
         "tokenAId": "fweth",
         "tokenBId": "usdc",
         "fee": "0.05%",
-        "tokenABalance": "1_000_000",
-        "tokenBBalance": "2_000_000_000",
+        "tokenABalance": "1_000_000_000",
+        "tokenBBalance": "2_000_000_000_000",
         "priceId": "eth-usdc",
         "priceBaseTokenId": "fweth"
+      },
+      {
+        "id": "wbtc-usdc",
+        "tokenAId": "wbtc",
+        "tokenBId": "usdc",
+        "fee": "0.3%",
+        "tokenABalance": "77_000_000",
+        "tokenBBalance": "2_000_000_000_000",
+        "priceId": "btc-usdc",
+        "priceBaseTokenId": "wbtc"
+      },
+      {
+        "id": "pepe-usdc",
+        "tokenAId": "pepe",
+        "tokenBId": "usdc",
+        "fee": "0.3%",
+        "tokenABalance": "1_800_000_000_000_000_000",
+        "tokenBBalance": "2_000_000_000_000",
+        "priceId": "pepe-usdc",
+        "priceBaseTokenId": "pepe"
       }
     ]
   },
@@ -73,9 +133,45 @@
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
-        "positionMinAmount": "0.001",
-        "baseLimit": "50_000",
-        "quoteLimit": "100_000_000"
+        "positionMinAmount": "0.000006",
+        "baseLimit": "1_000_000_000",
+        "quoteLimit": "2_000_000_000_000"
+      }
+    },
+    {
+      "id": "wbtc-usdc",
+      "uniswapPoolId": "wbtc-usdc",
+      "baseTokenId": "wbtc",
+      "params": {
+        "interestRate": "5.4%",
+        "maxLeverage": "20",
+        "recoveryMaxLeverage": "17",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "positionSlippage": "2.0%",
+        "mcSlippage": "5.0%",
+        "priceAgo": "15 min",
+        "positionMinAmount": "0.00000038",
+        "baseLimit": "77_000_000",
+        "quoteLimit": "2_000_000_000_000"
+      }
+    },
+    {
+      "id": "pepe-usdc",
+      "uniswapPoolId": "pepe-usdc",
+      "baseTokenId": "pepe",
+      "params": {
+        "interestRate": "5.4%",
+        "maxLeverage": "20",
+        "recoveryMaxLeverage": "17",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "positionSlippage": "2.0%",
+        "mcSlippage": "5.0%",
+        "priceAgo": "15 min",
+        "positionMinAmount": "1.0",
+        "baseLimit": "1_800_000_000_000_000_000",
+        "quoteLimit": "2_000_000_000_000"
       }
     }
   ],
