--- a/packages/oracle/config.json
+++ b/packages/oracle/config.json
@@ -96,6 +96,32 @@
             "query": "json(https://api.huobi.pro/market/history/trade?symbol=usdcusdt&size=1).data[0].data[0].price"
           }
         ]
+      },
+      {
+        "id": "btc-usdc",
+        "label": "btc/usdc",
+        "type": "http-get",
+        "direction": "forward",
+        "query": "json(https://api.huobi.pro/market/history/trade?symbol=btcusdc&size=1).data[0].data[0].price"
+      },
+      {
+        "id": "pepe-usdc",
+        "label": "pepe/usdc",
+        "type": "composite",
+        "sources": [
+          {
+            "type": "http-get",
+            "label": "pepe/usdt",
+            "direction": "forward",
+            "query": "json(https://api.huobi.pro/market/history/trade?symbol=pepeusdt&size=1).data[0].data[0].price"
+          },
+          {
+            "type": "http-get",
+            "label": "usdt/usdc",
+            "direction": "backward",
+            "query": "json(https://api.huobi.pro/market/history/trade?symbol=usdcusdt&size=1).data[0].data[0].price"
+          }
+        ]
       }
     ]
   },
@@ -218,6 +244,73 @@
         },
         {
           "poolMockId": "fmatic-usdc",
+          "periodMs": 60000
+        }
+      ]
+    },
+    {
+      "id": "zksync-goerli",
+      "ticksMs": 1000,
+      "ethereum": {
+        "nodeUrl": "https://testnet.era.zksync.dev"
+      },
+      "tokens": [
+        {
+          "id": "fweth",
+          "address": "0xf813Ede945d925f052bDFd37a649e14A587A2462",
+          "assertSymbol": "FWETH",
+          "assertDecimals": 18
+        },
+        {
+          "id": "usdc",
+          "address": "0x91f4d48Fc08b0383Dc3a20858911A0e6688bAD89",
+          "assertSymbol": "USDC",
+          "assertDecimals": 6
+        },
+        {
+          "id": "wbtc",
+          "address": "0x3f01E7165407Be31bB3e445c9060D694C70ac0C1",
+          "assertSymbol": "WBTC",
+          "assertDecimals": 8
+        },
+        {
+          "id": "pepe",
+          "address": "0xF7994cee12278Ef2db80E31FEcE1C348620863b0",
+          "assertSymbol": "PEPE",
+          "assertDecimals": 2
+        }
+      ],
+      "uniswapV3PoolMocks": [
+        {
+          "id": "fweth-usdc",
+          "address": "0xb9e37CAcACbc3fAF8F54b9dc9446eb4D8A64F7fc",
+          "priceId": "eth-usdc",
+          "priceBaseTokenId": "fweth"
+        },
+        {
+          "id": "wbtc-usdc",
+          "address": "0xC9363e55Fc7834Eb59977d48cC452eDBf0D47639",
+          "priceId": "wbtc-usdc",
+          "priceBaseTokenId": "wbtc"
+        },
+        {
+          "id": "pepe-usdc",
+          "address": "0x9615c97d4392F4739C0e5790cD8af45251fB45b2",
+          "priceId": "pepe-usdc",
+          "priceBaseTokenId": "pepe"
+        }
+      ],
+      "updatePriceJobs": [
+        {
+          "poolMockId": "fweth-usdc",
+          "periodMs": 60000
+        },
+        {
+          "poolMockId": "wbtc-usdc",
+          "periodMs": 60000
+        },
+        {
+          "poolMockId": "pepe-usdc",
           "periodMs": 60000
         }
       ]
