--- a/packages/deploy/src/data/deploy/polygon-mumbai/config.json
+++ b/packages/deploy/src/data/deploy/polygon-mumbai/config.json
@@ -41,14 +41,26 @@
       "label": "eth/usdc",
       "type": "http-get",
       "direction": "forward",
-      "query": "json(https://api.huobi.pro/market/history/trade?symbol=ethusdc&size=1).data[0].data[0].price"
+      "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=ETHUSDC).price"
     },
     {
       "id": "matic-usdc",
       "label": "matic/usdc",
-      "type": "http-get",
-      "direction": "forward",
-      "query": "json(https://www.mexc.com/open/api/v2/market/ticker?symbol=MATIC_USDC).data[0].last"
+      "type": "composite",
+      "sources": [
+        {
+          "type": "http-get",
+          "label": "matic/usdt",
+          "direction": "forward",
+          "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=MATICUSDT).price"
+        },
+        {
+          "type": "http-get",
+          "label": "usdt/usdc",
+          "direction": "backward",
+          "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=USDCUSDT).price"
+        }
+      ]
     }
   ],
   "uniswap": {
