--- a/packages/deploy/src/data/deploy/zksync-goerli/config.json
+++ b/packages/deploy/src/data/deploy/zksync-goerli/config.json
@@ -39,6 +39,13 @@
       "name": "Pepe",
       "symbol": "PEPE",
       "decimals": 2
+    },
+    {
+      "type": "mintable",
+      "id": "bitcoin",
+      "name": "HarryPotterObamaSonic10Inu",
+      "symbol": "BITCOIN",
+      "decimals": 8
     }
   ],
   "prices": [
@@ -72,6 +79,21 @@
           "label": "usdt/usdc",
           "direction": "backward",
           "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=USDCUSDT).price"
+        }
+      ]
+    },
+    {
+      "id": "bitcoin-usdc",
+      "label": "bitcoin/usdc",
+      "type": "lbkex",
+      "priceChain": [
+        {
+          "direction": "forward",
+          "pair": "bitcoin_usdt"
+        },
+        {
+          "direction": "backward",
+          "pair": "usdc_usdt"
         }
       ]
     }
@@ -111,6 +133,16 @@
         "tokenBBalance": "2_000_000_000_000",
         "priceId": "pepe-usdc",
         "priceBaseTokenId": "pepe"
+      },
+      {
+        "id": "bitcoin-usdc",
+        "tokenAId": "bitcoin",
+        "tokenBId": "usdc",
+        "fee": "0.3%",
+        "tokenABalance": "20_000_000_000_000",
+        "tokenBBalance": "2_000_000_000_000",
+        "priceId": "bitcoin-usdc",
+        "priceBaseTokenId": "bitcoin"
       }
     ]
   },
@@ -171,6 +203,24 @@
         "priceAgo": "15 min",
         "positionMinAmount": "1.0",
         "baseLimit": "1_800_000_000_000_000_000",
+        "quoteLimit": "2_000_000_000_000"
+      }
+    },
+    {
+      "id": "bitcoin-usdc",
+      "uniswapPoolId": "bitcoin-usdc",
+      "baseTokenId": "bitcoin",
+      "params": {
+        "interestRate": "5.4%",
+        "maxLeverage": "20",
+        "recoveryMaxLeverage": "17",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "positionSlippage": "2.0%",
+        "mcSlippage": "5.0%",
+        "priceAgo": "15 min",
+        "positionMinAmount": "0.01",
+        "baseLimit": "20_000_000_000_000",
         "quoteLimit": "2_000_000_000_000"
       }
     }
